--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   background-color: #e4e7ec;
 
-  .card {
+  .login-card {
     display: flex;
     border-radius: 15px;
     overflow: hidden;
