--- a/client/src/components/explore/explore.scss
+++ b/client/src/components/explore/explore.scss
@@ -6,11 +6,10 @@
 
   .explore1-container {
     display: flex;
-    justify-content: flex-start;
+    width: 100%;
+    justify-content: space-evenly;
 
-    .explore1-img{
-      padding-left: 50px;
-    }
+   
 
     .explore1-details {
       display: flex;
@@ -25,6 +24,54 @@
       p {
         padding: 10px;
         margin-left: 40px;
+      }
+    }
+  }
+
+  .explore2-container{
+    display: flex;
+    justify-content: space-evenly;
+   width: 100%;
+
+    .explore2-details{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      h2{
+        img{
+          margin-right: 20px;
+        }
+      }
+    }
+
+    .explore2-img{
+      img{
+        height: 400px;
+      }
+    }
+
+  }
+
+  .explore3-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .explore3-details{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      h2{
+        img{
+          margin-right: 20px;;
+        }
+      }
+      p{
+        text-align: center;
       }
     }
   }
