--- a/client/src/pages/newsfeed/newsfeed.scss
+++ b/client/src/pages/newsfeed/newsfeed.scss
@@ -3,6 +3,7 @@
     @include themify($themes){
         background-color: themed("bgSoft");
         color: themed("textColor");
-        padding: 20px 70px;
+        padding: 20px 40px;
+        border-right: 1px solid themed("textColorSoft");
     }
 }
