--- a/client/src/components/leftbar/leftbar.scss
+++ b/client/src/components/leftbar/leftbar.scss
@@ -1,66 +1,63 @@
 @import "../../style.scss";
 .leftbar{
     @include themify($themes){
-    flex: 2;
+    display: flex;
+    flex-direction: column;
+    flex:2;
+    height: 50px;
     position: sticky;
-    top: 75px;
-    height: calc(100vh - 75px);
-    overflow: scroll;
-    background-color: themed("bg");
-    color: themed("textColor");
+    top:0;
 
-    &::-webkit-scrollbar{
-        display: none;
-    }
-
-    hr{
-        border: none;
-        height: 0.5px;
-        background-color: themed("border");
-    }
     .container{
+        position:relative;
         display: flex;
-        flex-direction: column;
-       
+        padding: 10px 10px;
+        gap: 20px;
+
+        .logo{
+            img{
+                height: 120px;
+                width: 120px;
+                object-fit: cover;
+            }
+        }
+
         .menu{
             display: flex;
             flex-direction: column;
-            gap: 15px;
-            padding: 15px;
-            
+            padding: 0px 10px;
+            gap: 20px;
             span{
-                font-size: 12px;
-            }
-
-            .user{
-                display: flex;
-            align-items: center;
-            gap: 10px;
-            img{
-                height: 40px;
-                width: 40px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
-            span{
-                font-size: 14px;
-            }
+                font-weight: bold;
+                font-size: 15px;
+                color: themed("textColor");
             }
 
             .item{
+                cursor: pointer;
                 display: flex;
                 align-items: center;
-                
-                gap: 10px;
-                img{
-                    height: 40px;
-                    width: 40px;
-                }
-                span{
-                    font-size: 14px;
-                }
+                gap:10px;
+                color: themed("buttonTertiaryColor");
+                font-size: large;
+                height: 40px;
+                width: 90%;
+                padding: 0px 10px;
             }
+
+            .item:hover{
+                color: themed("buttonPrimaryColor");
+                border-radius: 5px;
+                transition: 400ms ease;
+                box-shadow: 0px 0px 10px 1px rgba(114,9,183,0.29);
+-webkit-box-shadow: 0px 0px 10px 1px rgba(114,9,183,0.29);
+-moz-box-shadow: 0px 0px 10px 1px rgba(114,9,183,0.29);
+            }        
+                
+            
         }
+
     }
+
 }
 }
