--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -11,6 +11,7 @@
     top:0;
     background-color: themed("bg");
     color: themed("textColor");
+    z-index: 999;
 
     .left{
         display: flex;
