--- a/client/src/components/leftbar/leftbar.scss
+++ b/client/src/components/leftbar/leftbar.scss
@@ -1,9 +1,13 @@
+@import "../../style.scss";
 .leftbar{
+    @include themify($themes){
     flex: 2;
     position: sticky;
-    top: 85px;
-    height: calc(100vh - 85px);
+    top: 75px;
+    height: calc(100vh - 75px);
     overflow: scroll;
+    background-color: themed("bg");
+    color: themed("textColor");
 
     &::-webkit-scrollbar{
         display: none;
@@ -12,7 +16,7 @@
     hr{
         border: none;
         height: 0.5px;
-        background-color: lightgrey;
+        background-color: themed("border");
     }
     .container{
         display: flex;
@@ -58,4 +62,5 @@
             }
         }
     }
+}
 }
