--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,13 +1,16 @@
+@import "../../style.scss";
 .navbar{
+    @include themify($themes){
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 15px 20px;
     height: 50px;
-    border-bottom: 1px solid lightgrey;
+    border-bottom: 1px solid themed("border");
     position: sticky;
     top:0;
-    background-color: white;
+    background-color: themed("bg");
+    color: themed("textColor");
 
     .left{
         display: flex;
@@ -26,7 +29,7 @@
         .search{
             display: flex;
             align-items: center;
-            border: 1px solid lightgray;
+            border: 1px solid themed("border");
             border-radius: 10px;
             gap: 10px;
             
@@ -34,6 +37,7 @@
                 border: hidden;
                 width: 500px;
                 padding: 10px;
+                background-color: themed("bg");
             }
 
             input:focus{
@@ -59,4 +63,5 @@
             }
         }
     }
+}
 }
