--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -1,84 +1,82 @@
 @import "../../style.scss";
-.post{
-    @include themify($themes){
-        box-shadow: 0px 0px 10px 1px rgba(164,182,225,0.29);
--webkit-box-shadow: 0px 0px 10px 1px rgba(164,182,225,0.29);
--moz-box-shadow: 0px 0px 10px 1px rgba(164,182,225,0.29);
-        border-radius: 20px;
-        background-color: themed("bg");
-        color:themed("textColor");
-    
+.post {
+  @include themify($themes) {
+    box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+    -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+    -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+    border-radius: 20px;
+    background-color: themed("bg");
+    color: themed("textColor");
 
-    .container{
-        padding: 20px;
+    .container {
+      padding: 20px;
 
-        .user{
+      .user {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .user-info {
+          display: flex;
+          gap: 20px;
+          align-items: center;
+          justify-content: center;
+
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          .details {
             display: flex;
-            align-items: center;
-            justify-content: space-between;
+            flex-direction: column;
 
-            .user-info{
-                display: flex;
-                gap: 20px;
-                align-items: center;
-                justify-content: center;
-
-                img{
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                }
-
-                .details{
-                    display: flex;
-                    flex-direction: column;
-
-                    span{
-                        font-size: 14px;
-                        font-weight: 500;
-                    }
-
-                    .date{
-                        font-size: 12px;
-                    }
-
-                }
+            span {
+              font-size: 14px;
+              font-weight: 500;
             }
+
+            .date {
+              font-size: 12px;
+            }
+          }
+        }
+      }
+
+      .content {
+        padding: 20px 0px;
+
+        img {
+          width: 100%;
+          max-height: 500px;
+          object-fit: cover;
+          margin-top: 10px;
         }
 
-        .content{
-            padding: 20px 0px;
-
-            img{
-                width: 100%;
-                max-height: 500px;
-                object-fit: cover;
-                margin-top: 10px;
-            }
-
-            p{
-                font-size: 12px;
-            }
+        p {
+          font-size: 12px;
         }
+      }
 
-        .info{
-            display: flex;
-            align-items: center;
-            gap: 20px;
+      .info {
+        display: flex;
+        align-items: center;
+        gap: 20px;
 
-            .item{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 10px;
+        .item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          cursor: pointer;
 
-                span{
-                    font-size: 12px;
-                    cursor: pointer;
-                }
-            }
+          span {
+            font-size: 12px;
+          }
         }
+      }
     }
-}
+  }
 }
