--- a/client/src/components/updateUser/updateUser.scss
+++ b/client/src/components/updateUser/updateUser.scss
@@ -1,2 +1,147 @@
 .update-user {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 55%;
+  height: 55%;
+  background-color: white;
+  z-index: 999;
+  box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+  border-radius: 15px;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    label {
+      font-size: medium;
+    }
+    input {
+      border: none;
+      width: 90%;
+      border-bottom: 1px solid lightgray;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+    .email-phone {
+      display: flex;
+      gap: 5px;
+
+      .email {
+        flex: 1;
+      }
+
+      .phone {
+        flex: 1;
+      }
+    }
+    .passwords {
+      display: flex;
+      gap: 10px;
+
+      .password {
+        flex: 1;
+      }
+
+      .confirm {
+        flex: 1;
+      }
+    }
+
+    .DOB-gender {
+      display: flex;
+      gap: 10px;
+      .DOB {
+        flex: 1;
+      }
+      .gender-container {
+        display: flex;
+        flex-direction: column;
+        .gender {
+          display: flex;
+          padding-top: 10px;
+          gap: 20px;
+        }
+      }
+    }
+
+    span {
+      color: red;
+      font-size: 14px;
+      display: none;
+    }
+
+    input#phone:invalid[focused="true"] {
+      border-bottom: 1px solid red;
+    }
+
+    input#phone:invalid[focused="true"] ~ span.phone-error {
+      display: block;
+    }
+
+    input#email:invalid[focused="true"] {
+      border-bottom: 1px solid red;
+    }
+
+    input#email:invalid[focused="true"] ~ span.email-error {
+      display: block;
+    }
+
+    input#password:invalid[focused="true"] {
+      border-bottom: 1px solid red;
+    }
+
+    input#password:invalid[focused="true"] ~ span.password-error {
+      display: block;
+    }
+
+    input#confirm-password:invalid[focused="true"] {
+      border-bottom: 1px solid red;
+    }
+
+    input#confirm-password:invalid[focused="true"]
+      ~ span.confirm-password-error {
+      display: block;
+    }
+
+    .buttons {
+      padding: 20px 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 50px;
+      .update-button {
+        padding: 10px;
+        border: none;
+        background-color: black;
+        color: white;
+        cursor: pointer;
+        border-radius: 10px;
+        width: 40%;
+      }
+
+      .cancel-button {
+        padding: 10px;
+        border: none;
+        background-color: lightgray;
+        color: black;
+        cursor: pointer;
+        border-radius: 10px;
+        width: 40%;
+      }
+    }
+
+    .pictures {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
 }
