Messages UI done

--- a/client/src/components/posts/posts.scss
+++ b/client/src/components/posts/posts.scss
@@ -65,6 +65,7 @@
             justify-content: center;
           }
           button {
+            cursor: pointer;
             height: 30px;
             display: flex;
             align-items: center;
