Created event page and notification API

--- a/client/src/pages/events/events.scss
+++ b/client/src/pages/events/events.scss
@@ -73,7 +73,7 @@
             min-width: 100vh;
           }
 
-          button {
+          .create-button {
             font-size: medium;
             height: 40px;
             width: 100px;
