--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -60,29 +60,6 @@
             transition: 400ms ease;
           }
 
-          .notification {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: 1.5px solid themed("textColorMid");
-            border-radius: 50%;
-            height: 40px;
-            width: 40px;
-            color: themed("textColorSoft");
-            .notification-icon {
-              padding: 20px;
-              cursor: pointer;
-            }
-          }
-          .notification:hover {
-            border: 1.5px solid themed("buttonPrimaryColor");
-            color: themed("buttonPrimaryColor");
-            box-shadow: 0px 0px 10px 1px rgba(114, 9, 183, 0.29);
-            -webkit-box-shadow: 0px 0px 10px 1px rgba(114, 9, 183, 0.29);
-            -moz-box-shadow: 0px 0px 10px 1px rgba(114, 9, 183, 0.29);
-            transition: 400ms ease;
-          }
-
           .logout {
             display: flex;
             align-items: center;
@@ -107,7 +84,8 @@
           }
         }
 
-        .suggestion {
+        .suggestion,
+        .notifications {
           display: flex;
           flex-direction: column;
 
@@ -134,16 +112,23 @@
         .items {
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          gap: 1px;
+          height: 40vh;
+          overflow-y: auto;
 
           .item {
             display: flex;
             align-items: center;
-            gap: 20px;
+            justify-content: flex-start;
+            gap: 10px;
+            box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+            -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+            -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+            padding: 10px;
 
             img {
-              height: 45px;
-              width: 45px;
+              height: 50px;
+              width: 50px;
               border-radius: 50%;
               object-fit: cover;
             }
@@ -151,6 +136,8 @@
             .user-info {
               display: flex;
               flex-direction: column;
+              gap: 10px;
+              width: 100%;
 
               span {
                 font-weight: bold;
@@ -160,6 +147,27 @@
                 font-weight: normal;
                 font-size: 15px;
               }
+              .buttons {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+
+                button {
+                  height: 30px;
+                  width: 80px;
+                  border: none;
+                  border-radius: 8px;
+                  background-color: themed("buttonPrimaryColor");
+                  color: white;
+                  cursor: pointer;
+                }
+                button:hover {
+                  transition: 400ms ease;
+                  box-shadow: 0px 0px 10px 1px rgba(114, 9, 183, 0.29);
+                  -webkit-box-shadow: 0px 0px 10px 1px rgba(114, 9, 183, 0.29);
+                  -moz-box-shadow: 0px 0px 10px 1px rgba(114, 9, 183, 0.29);
+                }
+              }
             }
 
             .button {
@@ -167,7 +175,7 @@
                 height: 30px;
                 width: 80px;
                 border: none;
-                border-radius: 10px;
+                border-radius: 8px;
                 background-color: themed("buttonPrimaryColor");
                 color: white;
                 cursor: pointer;
@@ -186,6 +194,9 @@
               }
             }
           }
+        }
+        .items::-webkit-scrollbar {
+          display: none;
         }
         hr {
           border: none;
