--- a/client/src/components/notification/notification.scss
+++ b/client/src/components/notification/notification.scss
@@ -7,8 +7,8 @@
     -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
     -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
     border-radius: 8px;
+    display: flex;
     padding: 10px;
-
     .notification-container {
       display: flex;
       flex-direction: column;
