--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -112,10 +112,10 @@
         .items {
           display: flex;
           flex-direction: column;
-          gap: 1px;
+          gap: 10px;
           height: 40vh;
           overflow-y: auto;
-
+          padding: 0px 5px;
           .item {
             display: flex;
             align-items: center;
