--- a/client/src/pages/eventDetails/eventDetails.scss
+++ b/client/src/pages/eventDetails/eventDetails.scss
@@ -4,6 +4,7 @@
   @include themify($themes) {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: themed("bgSoft");
     color: themed("textColor");
     min-height: 100vh;
@@ -36,6 +37,75 @@
         .eventType {
           color: red;
         }
+      }
+
+      .navigation {
+        padding: 10px 0px;
+        box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        width: 100%;
+        ul {
+          display: flex;
+          align-items: center;
+          justify-content: space-evenly;
+          list-style: none;
+          padding: 0;
+
+          li {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 500;
+            cursor: pointer;
+            height: 100%;
+            width: 100%;
+            padding: 5px 0px;
+          }
+          a {
+            text-decoration: none;
+          }
+
+          .selected {
+            border-bottom: 5px solid themed("buttonPrimaryColor");
+          }
+        }
+      }
+
+      .calendar {
+        width: 100%;
+      }
+
+      .plan-card {
+        border-radius: 8px;
+        padding: 10px;
+        height: 5%;
+        background-color: themed("bgSoft");
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        textarea {
+          border-radius: 8px;
+          width: 100%;
+          height: 20%;
+        }
+
+        .actions {
+          padding: 10px;
+          display: flex;
+          align-items: center;
+          gap: 30px;
+        }
+      }
+
+      .restricted {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-weight: 700;
       }
     }
   }
