--- a/client/src/pages/eventDetails/eventDetails.scss
+++ b/client/src/pages/eventDetails/eventDetails.scss
@@ -108,5 +108,35 @@
         font-weight: 700;
       }
     }
+    .plans-cards {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 10px 0px;
+
+      .plan-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+        padding: 10px;
+        box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        -webkit-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+        -moz-box-shadow: 0px 0px 10px 1px rgba(164, 182, 225, 0.29);
+
+        .plan-details {
+          display: flex;
+          align-items: center;
+          gap: 20px;
+        }
+        .actions {
+          align-self: flex-end;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          justify-content: space-around;
+        }
+      }
+    }
   }
 }
