Added scraping to admin panel

--- a/client/src/components/eventMembers/members.scss
+++ b/client/src/components/eventMembers/members.scss
@@ -25,8 +25,16 @@
 
     .user-details {
       display: flex;
+      width: 100%;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
+
+      .payment {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-right: 20px;
+      }
     }
   }
 }
